--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 /* style.css */
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background: url('background.png') no-repeat center center fixed;
+  background: rgb(46, 46, 17) url('background.png') no-repeat center center fixed;
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -124,7 +121,7 @@ button:hover {
   top: 12px;
   left: 12px;
   background: transparent;
-  color: red;
+  color: #333;
   font-size: 30px;
   border: none;
   cursor: pointer;
