--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
 }
 
 main {
-  width: 100%;
-  max-width: 500px;
+  width: 90vw;
+  max-width: 1000px;
   padding: 20px;
   box-sizing: border-box;
   margin: 0 auto;
